--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <section>
     <h2>About 1teb</h2>
-    <p class="intro">Hewwo! This page is all about <span>1teb</span>, the cutest UwU boy who absolutely slays with his femboy charm! Whether you're here to adore or be adored, you're in the right place. <span>Slay!</span></p>
+    <p class="intro">Hewwo! This page is all about <span>1Teb</span>, the cutest UwU discord rizzmaster mod! Whether you're here to adore or be adored, you're in the right place. <span>:P!</span></p>
 
     <h2>Femboy Gallery ✨</h2>
     <div class="gallery">
